--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Contact</li>
+        </ul>
+    </header>
+   <main>
+    <section>1</section>
+    <section>2</section>
+    <section>3</section>
+   </main>
+    <footer>copyright</footer>
 </body>
 </html>
