--- a/index.html
+++ b/index.html
@@ -4,20 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Contact</li>
+<div class="header-container">
+<!-- img -->
+ <a href="/index.html">
+    <img src="assets/images/vectors/logo.svg" alt="Logo"></a>
+
+
+    <!-- nav elements -->
+     <nav>
+        <ul class="nav-container">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about us">About Us</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#solution">Solution</a></li>
         </ul>
+     </nav>
+</div>
     </header>
-   <main>
-    <section>1</section>
-    <section>2</section>
-    <section>3</section>
-   </main>
-    <footer>copyright</footer>
+    <main>
+        <div class="main-container">
+        <!-- Section 1 -->
+        <section id="home"   class="section-container">
+          <h1>Home Page</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nihil
+            tempore ducimus voluptates commodi, minima maiores architecto magni
+            illo? Doloribus pariatur rem animi voluptatibus velit, neque quas nam!
+            Expedita, qui?
+          </p>
+        </section>
+        <!-- section 2 -->
+        <section id="about us"   class="section-container">
+          <h1>About us</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nihil
+            tempore ducimus voluptates commodi, minima maiores architecto magni
+            illo? Doloribus pariatur rem animi voluptatibus velit, neque quas nam!
+            Expedita, qui?
+          </p>
+        </section>
+        <!-- section 3 -->
+        <section  id="features"   class="section-container">
+          <h1>Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nihil
+            tempore ducimus voluptates commodi, minima maiores architecto magni
+            illo? Doloribus pariatur rem animi voluptatibus velit, neque quas nam!
+            Expedita, qui?
+          </p>
+        </section>
+        <!-- section 4 -->
+        <section  id="solutions"    class="section-container">
+          <h1>Solutions</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nihil
+            tempore ducimus voluptates commodi, minima maiores architecto magni
+            illo? Doloribus pariatur rem animi voluptatibus velit, neque quas nam!
+            Expedita, qui?
+          </p>
+        </section>
+    </div>
+    </main>
 </body>
 </html>
