--- a/index.html
+++ b/index.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Contact</li>
-        </ul>
+      <div class="header-container">
+        <!-- Img -->
+        <a href="/index.html">
+          <img src="assets/images/png/logo header.svg" alt="logo" />
+        </a>
+
+        <!-- Nav Element -->
+        <nav>
+          <ul class="nav-container">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#solution">Solutions</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-   <main>
-    <section>1</section>
-    <section>2</section>
-    <section>3</section>
-   </main>
-    <footer>copyright</footer>
-</body>
+    <main>
+      <div class="main-container">
+        <!-- Section 1 -->
+        <section id="home" class="section-container">
+          <h1>Home Page</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+            nihil tempore ducimus voluptates commodi, minima maiores architecto
+            magni illo? Doloribus pariatur rem animi voluptatibus velit, neque
+            quas nam! Expedita, qui?
+          </p>
+        </section>
+        <!-- section 2 -->
+        <section id="about" class="section-container">
+          <h1>About us</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+            nihil tempore ducimus voluptates commodi, minima maiores architecto
+            magni illo? Doloribus pariatur rem animi voluptatibus velit, neque
+            quas nam! Expedita, qui?
+          </p>
+        </section>
+        <!-- section 3 -->
+        <section id="features" class="section-container">
+          <h1>Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+            nihil tempore ducimus voluptates commodi, minima maiores architecto
+            magni illo? Doloribus pariatur rem animi voluptatibus velit, neque
+            quas nam! Expedita, qui?
+          </p>
+        </section>
+        <!-- section 4 -->
+        <section id="solution" class="section-container">
+          <h1>Solutions</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+            nihil tempore ducimus voluptates commodi, minima maiores architecto
+            magni illo? Doloribus pariatur rem animi voluptatibus velit, neque
+            quas nam! Expedita, qui?
+          </p>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
