--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <a href="/index.html">
           <img src="assets/images/png/logo header.svg" alt="logo" />
         </a>
+        <!-- burger menu -->
+
+         <div class="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+         </div>
 
         <!-- Nav Element -->
         <nav>
