--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         </a>
         <!-- burger menu -->
 
-         <div class="burger">
+        <div class="burger">
           <span></span>
           <span></span>
           <span></span>
-         </div>
+        </div>
 
-        <!-- Nav Element -->
-        <nav>
+        <!-- Nav Element Desktop -->
+        <nav class="desktop-menu">
           <ul class="nav-container">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About us</a></li>
@@ -32,6 +32,17 @@
         </nav>
       </div>
     </header>
+
+    <!-- Nav Element For Mobile -->
+    <nav class="mobile-menu">
+      <ul class="mobile-menu-list">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#solution">Solutions</a></li>
+      </ul>
+    </nav>
+
     <main>
       <div class="main-container">
         <!-- Section 1 -->
